updated packages and fixed db data error to get teams compoentn to display, also added position relative to fix team cards names from spilling to wrong place

--- a/src/Resources/css/app.css
+++ b/src/Resources/css/app.css
@@ -418,6 +418,7 @@ footer .footer_discl {
     width: 300px;
     padding: 10px 10px 20px 10px;
     font-family: 'Righteous';
+    position: relative;
 }
 .player_card_wrapper .player_card_thmb {
     border: 1px solid #eeeeee;
